unpackaged/main/default/objects/n2de__Simulated_distribution_result__c/n2de__Simulated_distribution_result__c.object-meta.xml
<CustomObject>
    <label>Simulated distribution result</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Simulated distribution results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>