unpackaged/main/default/objects/n2de__Simulated_distribution_result__c/fields/n2de__Order__c.field-meta.xml
<CustomField>
    <fullName>n2de__Order__c</fullName>
    <inlineHelpText>Order in which the assignment simulation results should be rebuilt</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>