unpackaged/main/default/objects/n2de__Simulated_distribution_result__c/fields/n2de__Simulated_distribution__c.field-meta.xml
<CustomField>
    <fullName>n2de__Simulated_distribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Simulated distribution</label>
    <referenceTo>n2de__Simulated_distribution__c</referenceTo>
    <relationshipLabel>Simulated distribution results</relationshipLabel>
    <relationshipName>Simulated_distribution_results</relationshipName>
    <type>Lookup</type>
</CustomField>