unpackaged/main/default/objects/n2de__Simulated_distribution_result__c/fields/n2de__Simulation_result__c.field-meta.xml
<CustomField>
    <fullName>n2de__Simulation_result__c</fullName>
    <label>Simulation result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>